* disk agent can monitor volume mount points
* Proxy access : BBWin can access to your hobbit server through a proxy (http proxy)
  You can specify a user/password if you use http proxy basic authentification.
* disk agent will alert you if a disk monitored with a custum rule disappear from the Server.
  (Example : external usb harddrive turned off)
* who agent : report current connected users on the servers

** Centralized mode for agents cpu, disk, memory, msgs, netstat, ports, procs, timediff, uptime
** Centralized mode graphing network traffic
** See the bbWin webpage 


BBWin 0.9 Preview version - December 5th 2006
-------------------


+ New Features
* Msgs agent reports events username and you may filter event with user name
* Msgs agent reports some statistics about each event log file. You can activate
  an option which alert you when an event log is full. See the help chm file for details.
* New BBWinUpdate agent : it used for the semi centralized mode. You can configure the agent
  to download configurations updates from a central hobbit server.
* First version of BBWin centralized mode implemented. Backend for hobbit not coded.
  Look at the BBWin.cfg example in the doc folder or in the documentation

+ Updates
* system uptime sometimes returns 0 seconds on the first query. BBWin now send 
  a green status when this happens to avoid incorrect alerts.
* msgs now formats description field in status so you don't have to scroll your window
  to read a large event description
* disk agent reported alerts on unrecognized disks (like disks part of cluster resources on
  the inactive node of an MSCS cluster). These disks are now automatically ignored.
* cluster.exe is more verbose when it check the Windows version
* procs agent now is using rules with signs '+' or '-' because XML format doesn't accept
  '<' sign in attributes ... However, the compatibility with '<' and '>' is preserved.